--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="theme-color" content="#000000">
-<link rel="shortcut icon" type="image/png" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/329180/firework-burst-icon-v2.png">
-<link rel="icon" type="image/png" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/329180/firework-burst-icon-v2.png">
-<link rel="apple-touch-icon-precomposed" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/329180/firework-burst-icon-v2.png">
+<link rel="shortcut icon" type="image/png" href="https://avatars.mds.yandex.net/get-dialogs/998463/bb8671ec69da2698c9dd/orig">
+<link rel="icon" type="image/png" href="https://avatars.mds.yandex.net/get-dialogs/998463/bb8671ec69da2698c9dd/orig">
+<link rel="apple-touch-icon-precomposed" href="https://avatars.mds.yandex.net/get-dialogs/998463/bb8671ec69da2698c9dd/orig">
 <meta name="msapplication-TileColor" content="#000000">
-<meta name="msapplication-TileImage" content="https://s3-us-west-2.amazonaws.com/s.cdpn.io/329180/firework-burst-icon-v2.png">
+<meta name="msapplication-TileImage" content="https://avatars.mds.yandex.net/get-dialogs/998463/bb8671ec69da2698c9dd/orig">
 <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
 
@@ -24,131 +24,7 @@
 <!-- partial:index.partial.html -->
 <!-- YOUR CUSTOM MARKUP -->
 
-<script type="text/javascript">
-(function(){
-  var pageInfo,
-      baseUrl;
-  //
-  function search(keyword, nextPage) {
-      loadMore.style.display = 'none';
-      previewMask.style.display = 'none';
-      loadingMask.style.display = 'flex';
-      keyword = encodeURI(keyword);
-      baseUrl = 'https://www.instagram.com/explore/tags/'+keyword+'/?__a=1';
-      if(nextPage && pageInfo) {
-        baseUrl += '&max_id=' + pageInfo.end_cursor;
-      } else {
-        result.innerHTML = "";
-      }
-      $.get(baseUrl, function(resp){ 
-        pageInfo = resp.graphql.hashtag.edge_hashtag_to_media['page_info'];
-        var count = resp.graphql.hashtag.edge_hashtag_to_media['count'],
-            edges = resp.graphql.hashtag.edge_hashtag_to_media['edges'];
-        
-        for(obj in edges) {
-          var div = document.createElement('div');
-          var img = document.createElement('img');
-          var node = edges[obj].node;
-          img.src = node.display_url;
-          img.style.width = '360px';
-          div.appendChild(img);
-          div.style.display = 'inline-block';
-          div.style.padding = '0px';
-          div.margin = 'auto';
-          result.appendChild(div);
-        }
-        //
-        window.scrollTo(0,document.body.scrollHeight);
-        loadingMask.style.display = 'none';
-        loadMore.style.display = pageInfo.has_next_page ? 'block' : 'none';
-      });
-  }
-  // UI
-  var searchForm = document.createElement('div'),
-      input = document.createElement('input'),
-      result = document.createElement('div'),
-      loadMore = document.createElement('div'),
-      loadingMask = document.createElement('div'),
-      loading = document.createElement('div'),
-      previewMask = document.createElement('div'),
-      preview = document.createElement('img');
-  
-  result.style.paddingTop = '50px';
-  result.addEventListener('click', function(e){
-    if (e.srcElement.nodeName === "IMG") {
-      previewMask.style.display = 'flex';
-      preview.src = e.srcElement.src;
-    }
-  });
-  
-  preview.style.width = '90%';
-  preview.style.margin = 'auto';
-  
-  previewMask.style.position = 'fixed';
-  previewMask.style.display = 'none';
-  previewMask.style.height = '100vh';
-  previewMask.style.width = '100vw';
-  previewMask.style.background = '#ccc8';
-  previewMask.appendChild(preview);
-  previewMask.addEventListener('click', function(){
-    previewMask.style.display = 'none';
-  });
-  loading.style.display = 'inline-block';
-  loading.style.width = '10px';
-  loading.style.height = '10px';
-  loading.style.background = 'blue';
-  loading.style.margin = 'auto';
-  loading.className = 'loading';
-  
-  loadingMask.style.position = 'fixed';
-  loadingMask.style.display = 'none';
-  loadingMask.style.height = '100vh';
-  loadingMask.style.width = '100vw';
-  loadingMask.style.background = '#ccc8';
-  loadingMask.appendChild(loading);
-  loadMore.textContent = ' [ ↓ ] More More More [ ↓ ] ';
-  loadMore.style.display = 'none';
-  loadMore.style.textAlign = 'center';
-  loadMore.style.background = 'Aqua';
-  loadMore.style.lineHeight = '2.5';
-  loadMore.style.cursor = 'pointer';
-  loadMore.addEventListener('click', function(){
-    search(input.value, true);
-  });
-  
-  input.placeholder = 'input keywords';
-  input.style.height = '25px';
-  input.style.width = '95%';
-  input.style.lineHeight = '2';
-  input.style.fontSize = '20px';
-  input.addEventListener('keyup', function(e){
-    if(e.keyCode === 13) {
-      if(input.value.length < 2) {
-        alert('Please enter at least 2 characters');
-      } else {
-        search(input.value);
-      }  
-    }
-  });
-  searchForm.style.display = 'block';
-  searchForm.style.position = 'fixed';
-  searchForm.style.top = '5px';
-  searchForm.style.padding = '5px';
-  searchForm.style.width = '95%';
-  searchForm.style.textAlign = 'center';
-  searchForm.appendChild(input);
-  
-  document.body.appendChild(loadingMask);
-  document.body.appendChild(previewMask);
-  document.body.appendChild(searchForm);
-  document.body.appendChild(result);
-  document.body.appendChild(loadMore);
-  
-  // init
-  input.value = 'gachalife';
-  search(input.value);
-})()
-</script>
+<script id="chatBroEmbedCode">/* Chatbro Widget Embed Code Start */function ChatbroLoader(chats,async){async=!1!==async;var params={embedChatsParameters:chats instanceof Array?chats:[chats],lang:navigator.language||navigator.userLanguage,needLoadCode:'undefined'==typeof Chatbro,embedParamsVersion:localStorage.embedParamsVersion,chatbroScriptVersion:localStorage.chatbroScriptVersion},xhr=new XMLHttpRequest;xhr.withCredentials=!0,xhr.onload=function(){eval(xhr.responseText)},xhr.onerror=function(){console.error('Chatbro loading error')},xhr.open('GET','//www.chatbro.com/embed.js?'+btoa(unescape(encodeURIComponent(JSON.stringify(params)))),async),xhr.send()}/* Chatbro Widget Embed Code End */ChatbroLoader({encodedChatId: '14kvr'});</script>
 
 
 <!-- FIREWORK APP MARKUP -->
