--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Chat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="icon" type="image/png" href="https://avatars.mds.yandex.net/get-dialogs/998463/bb8671ec69da2698c9dd/orig">
+
+  <meta http-equiv="refresh" content="0; URL=http://chat.youapp.space">
 	
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
