--- a/index.html
+++ b/index.html
@@ -29,19 +29,126 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 90%;
-  background: #25b6d2;
+  height: 100%;
+  background: #0080ff;
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
 }
+body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+}
+h1 {
+  color: #f1c40f;
+  font-size: 1rem;
+  text-transform: uppercase;
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 2rem;
+  }
+}
+p {
+  color: #f1c40f;
+  font-size: 0.8rem;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+}
+.btn {
+  box-sizing: border-box;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: transparent;
+  border: 2px solid #e74c3c;
+  border-radius: 0.6em;
+  color: #e74c3c;
+  cursor: pointer;
+  display: flex;
+  align-self: center;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
+  margin: 20px;
+  padding: 1.2em 2.8em;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+.btn:hover, .btn:focus {
+  color: #fff;
+  outline: 0;
+}
+.third {
+  border-color: #3498db;
+  color: #fff;
+  box-shadow: 0 0 2px 0 #3498db inset, 0 0 8px 1px #3498db;
+}
+.sb-img {
+  max-width: 281px;
+  height: 281px;
+}
 </style>
-	
-<script id="chatBroEmbedCode">/* Chatbro Widget Embed Code Start */function ChatbroLoader(chats,async){async=!1!==async;var params={embedChatsParameters:chats instanceof Array?chats:[chats],lang:navigator.language||navigator.userLanguage,needLoadCode:'undefined'==typeof Chatbro,embedParamsVersion:localStorage.embedParamsVersion,chatbroScriptVersion:localStorage.chatbroScriptVersion},xhr=new XMLHttpRequest;xhr.withCredentials=!0,xhr.onload=function(){eval(xhr.responseText)},xhr.onerror=function(){console.error('Chatbro loading error')},xhr.open('GET','//www.chatbro.com/embed.js?'+btoa(unescape(encodeURIComponent(JSON.stringify(params)))),async),xhr.send()}/* Chatbro Widget Embed Code End */ChatbroLoader({encodedChatId: '14kvr'});</script>
 	
 </head>
 <body>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+<img src="" class="sb-img js-img" data-hastag="gachalife"/>
+<p>YOU</p>
 <!-- partial:index.partial.html -->
-<!-- YOUR CUSTOM MARKUP -->
+<button class="btn third"><a style="color: #ffffff" href="http://chat.youapp.space" class="twitter-follow-button" data-show-count="false" data-size="large">New chat</a></button>
+<p>Inspiration for new ways to make interactive!</p>
 
+<!-- partial -->
+  
+  <script type="text/javascript">
+$(document).ready(function(){
+  var photos,
+      i = 0,
+      id = null,
+      newPhotos;
+  
+  ajaxCall();
+  
+  function ajaxCall() {
+    var hastag = $(".js-img").data("hastag")
+    
+    $.ajax({
+      url: "https://www.instagram.com/explore/tags/"+hastag+"/?__a=1",
+      dataType: "json",
+      success: function(data) {
+        photos = data.graphql.hashtag.edge_hashtag_to_media.edges;
+        setTimeout(start, 500);
+      },
+      error: function() {
+        setTimeout(ajaxCall, 60000);
+      }
+    });
+  }
+  function start() {
+    i = 0;
+    $(".js-img").attr("src", photos[i].node.display_url);
+    i++;
+    id = setInterval(function(){
+      $(".js-img").attr("src", photos[i].node.display_url);
+      i++;
+      if(i === photos.length) {
+        i = 0;
+        ajaxCall();
+        clearInterval(id);
+      }
+    }, 1000);
+  }
+});
+</script>
 </body>
 </html>
