--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Chat</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="icon" type="image/png" href="https://avatars.mds.yandex.net/get-dialogs/998463/bb8671ec69da2698c9dd/orig">
-
-  <meta http-equiv="refresh" content="0; URL=http://chat.youapp.space">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
@@ -22,133 +17,32 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/55979509" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
-	
-<style>
-html,
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background: #0080ff;
-  font-family: "Montserrat", sans-serif;
-  font-size: 16px;
-}
-body {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
-  align-content: center;
-}
-h1 {
-  color: #f1c40f;
-  font-size: 1rem;
-  text-transform: uppercase;
-  display: block;
-  width: 100%;
-  text-align: center;
-}
-@media screen and (max-width: 600px) {
-  h1 {
-    font-size: 2rem;
-  }
-}
-p {
-  color: #f1c40f;
-  font-size: 0.8rem;
-  width: 100%;
-  padding: 20px;
-  text-align: center;
-}
-.btn {
-  box-sizing: border-box;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  background-color: transparent;
-  border: 2px solid #e74c3c;
-  border-radius: 0.6em;
-  color: #e74c3c;
-  cursor: pointer;
-  display: flex;
-  align-self: center;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1;
-  margin: 20px;
-  padding: 1.2em 2.8em;
-  text-decoration: none;
-  text-align: center;
-  text-transform: uppercase;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
-}
-.btn:hover, .btn:focus {
-  color: #fff;
-  outline: 0;
-}
-.third {
-  border-color: #3498db;
-  color: #fff;
-  box-shadow: 0 0 2px 0 #3498db inset, 0 0 8px 1px #3498db;
-}
-.sb-img {
-  max-width: 281px;
-  height: 281px;
-}
-</style>
-	
-</head>
-<body>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-<img src="" class="sb-img js-img" data-hastag="gachalife"/>
-<p>YOU</p>
-<!-- partial:index.partial.html -->
-<button class="btn third"><a style="color: #ffffff" href="http://chat.youapp.space" class="twitter-follow-button" data-show-count="false" data-size="large">New chat</a></button>
-<p>Inspiration for new ways to make interactive!</p>
-
-<!-- partial -->
-  
-  <script type="text/javascript">
-$(document).ready(function(){
-  var photos,
-      i = 0,
-      id = null,
-      newPhotos;
-  
-  ajaxCall();
-  
-  function ajaxCall() {
-    var hastag = $(".js-img").data("hastag")
     
-    $.ajax({
-      url: "https://www.instagram.com/explore/tags/"+hastag+"/?__a=1",
-      dataType: "json",
-      success: function(data) {
-        photos = data.graphql.hashtag.edge_hashtag_to_media.edges;
-        setTimeout(start, 500);
-      },
-      error: function() {
-        setTimeout(ajaxCall, 60000);
-      }
-    });
-  }
-  function start() {
-    i = 0;
-    $(".js-img").attr("src", photos[i].node.display_url);
-    i++;
-    id = setInterval(function(){
-      $(".js-img").attr("src", photos[i].node.display_url);
-      i++;
-      if(i === photos.length) {
-        i = 0;
-        ajaxCall();
-        clearInterval(id);
-      }
-    }, 1000);
-  }
-});
-</script>
-</body>
+	<style type="text/css">
+	body
+	{
+	margin: 0px 0px 80px 0px;
+	padding: 0px;
+        overflow: hidden;
+	}
+	
+	div
+	{
+	width: 100%;
+	height: 500px;
+	}
+	
+	iframe
+	{
+	width: 100%;
+	height:100%;
+	border: 0px;
+	}
+	</style>
+	</head>
+	<body>
+		<div>
+			<iframe src="https://minnit.chat/GL?embed&nickname=" style=""></iframe>
+		</div>
+	</body>
 </html>
