--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="icon" type="image/png" href="https://avatars.mds.yandex.net/get-dialogs/998463/bb8671ec69da2698c9dd/orig">
 
-  <meta http-equiv="refresh" content="0; URL=https://youapp.space/chatroom/">
+  <meta http-equiv="refresh" content="0; URL=https://play.google.com/store/apps/details?id=online.creators.chat">
 	
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
