--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ p {
 <img src="" class="sb-img js-img" data-hastag="gachalife"/>
 <p>YOU</p>
 <!-- partial:index.partial.html -->
-<button class="btn third"><a style="color: #ffffff" href="http://chat.youapp.space" class="twitter-follow-button" data-show-count="false" data-size="large">New chat</a></button>
+<button class="btn third"><a style="color: #ffffff" href="https://play.google.com/store/apps/details?id=online.creators.chat" class="twitter-follow-button" data-show-count="false" data-size="large">New chat</a></button>
 <p>Inspiration for new ways to make interactive!</p>
 
 <!-- partial -->
